# zwift_click_handling

./: .env  README.md  app.py  log.txt  pyproject.toml  ui.py
zwift_click_handler/: __init__.py
