[tool.poetry]
name = "zwift-click-handler"
version = "0.1.0"
description = ""
authors = ["Joshua Taillon <jat255@gmail.com>", "Joshua Spires <jspires111@gmail.com>"]
readme = "README.md"
packages = [{include = "zwift_click_handler"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
python-dotenv = "^1.0.1"
bleak = "^0.22.1"
rich = "^13.7.1"
cryptography = "^42.0.7"
protobuf = "3.10.0"
bbpb = "^1.2.0"
keyboard = "^0.13.5"
cffi = {version = "^1.17.1", allow-prereleases = true}
blackboxprotobuf = "^1.0.1"
PyQt6 = "^6.7.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"